[package]
name = "sunshine-bounty-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
description = "FFI for the sunshine bounty module."
license = "ISC"
documentation = "https://docs.rs/sunshine-bounty-ffi"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sunshine-bounty-client = { path = "../../client/client" }
sunshine-codec = { default-features = false, git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-ffi-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
substrate-subxt = "0.11.0"
anyhow = "1.0.32"

[dev-dependencies]
test-client = { path = "../../bin/client" }

[features]
default = ["bounty-key", "bounty-wallet", "bounty-module"]
bounty-key = []
bounty-wallet = []
bounty-module = []
