[package]
name = "sunshine-bounty-gbot"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"
description = "github bot for sunshine bounty"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
octocrab = { git = "https://github.com/XAMPPRocky/octocrab" }
thiserror = "1.0.20"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "0.2.22", default-features = false, features = ["macros"] }
env_logger = "0.7.1"
