[package]
name = "sunshine-bank"
version = "0.0.2"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/web3garden/sunshine-runtime-module-library"
description = "register organizations and open joint-owned on-chain and off-chain bank accounts"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
sp-std = { version = "2.0.0-alpha.7", default-features = false }
sp-runtime = { version = "2.0.0-alpha.7", default-features = false }
frame-support = { version = "2.0.0-alpha.7", default-features = false }
frame-system = { version = "2.0.0-alpha.7", default-features = false }
util = { package = "sunshine-util", version = "0.0.2", default-features = false, path = "../util" }
membership = { package = "sunshine-membership", version = "0.0.1", default-features = false, path = "../membership" }
shares-membership = { package = "sunshine-shares-membership", version = "0.0.1", default-features = false, path = "../shares-membership" }
shares-atomic = { package = "sunshine-shares-atomic", version = "0.0.1", default-features = false, path = "../shares-atomic" }
vote-yesno = { package = "sunshine-vote-yesno", version = "0.0.1", default-features = false, path = "../vote-yesno" }
vote-petition = { package = "sunshine-vote-petition", version = "0.0.1", default-features = false, path = "../vote-petition" }
# https://github.com/paritytech/substrate/issues/4179
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

[dev-dependencies]
pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
sp-io = { version = "2.0.0-alpha.7", default-features = false }
sp-core = { version = "2.0.0-alpha.7", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "membership/std",
    "shares-membership/std",
    "shares-atomic/std",
    "vote-petition/std",
]
