[package]
name = "bounty"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/web3garden/sunshine-runtime-module-library"
description = "on chain RFP system"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
serde = { version = "1.0.104", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-alpha.7", default-features = false }
sp-runtime = { version = "2.0.0-alpha.7", default-features = false }
frame-support = { version = "2.0.0-alpha.7", default-features = false }
frame-system = { version = "2.0.0-alpha.7", default-features = false }
pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
util = { package = "sunshine-util", path = "../util", default-features = false, path = "../util" }
# https://github.com/paritytech/substrate/issues/4179
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

[dev-dependencies]
sp-io = { version = "2.0.0-alpha.7", default-features = false }
sp-core = { version = "2.0.0-alpha.7", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
