[package]
name = "sunshine-util"
version = "0.0.3"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-node"
description = "sunshine governance framework objects and relationships"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
derive-new = {version = "0.5", default-features=false}
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
frame-support = { version = "2.0.0-rc2", default-features = false }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] } # https://github.com/paritytech/substrate/issues/4179
sp-core = { version = "2.0.0-rc2", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-rc2", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "sp-core/std",
    "sp-std/std",
]
