
[package]
name = "sunshine-vote-petition"
version = "0.0.2"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-node"
description = "minimal vote module for collecting signatures on-chain"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
pallet-balances = { version = "2.0.0-rc2", default-features = false }
membership = { package = "sunshine-membership", version = "0.0.2", default-features = false }
shares-membership = { package = "sunshine-shares-membership", version = "0.0.2", default-features = false }
sp-std = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
frame-support = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }
util = { package = "sunshine-util", version = "0.0.3", default-features = false }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] } # https://github.com/paritytech/substrate/issues/4179

[dev-dependencies]
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
rand = "0.7.3"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "membership/std",
    "shares-membership/std",
]
