[package]
name = "sunshine-insurance"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"
description = "dispute resolution for two-party agreements"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
serde = { version = "1.0.116", optional = true }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
util = { package = "sunshine-bounty-utils", path = "../../utils", default-features=false}
org = { package = "sunshine-org", path = "../org", default-features=false}
vote = { package = "sunshine-vote", path = "../vote", default-features=false}

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"org/std",
]
