[package]
name = "sunshine-kickback"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"
description = "substrate kickback impl for event management with incentives"
keywords = ["sunshine", "substrate"]

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
util = { package = "sunshine-bounty-utils", path = "../../utils", default-features=false}
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[dev-dependencies]
serde = "1.0.116"
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
